--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.9 - 2015-02-12
+* Added fields community_vat, cash_vat_operation, tax_person_operation,
+related_goods_operation and cash_vat_criteria according with modifications made
+by Order HAP/1732/2014, of september 24th, B.O.E. 234 of september 26th of 2014
+
 Version 0.8 - 2014-09-23
 * Cut char fields if value is longer than size
 * Adapt to new changes in model CSB303
