--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
+Version 0.11 - 2015-10-07
+* Fill char fields with spaces is it's length is less than the expected
+
 Version 0.10 - 2015-09-28
-Update 303 model
+* Update 303 model
 
 Version 0.9 - 2015-02-12
 * Added fields community_vat, cash_vat_operation, tax_person_operation,
