--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fix amount position of PROPERTY_RECORD of aeat347
+* Put a white space in sign position for values in 347 and 340
+
 Version 0.13 - 2015-10-21
 * Allow to build doc using 'python setup.py build_sphinx'
 
