--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Inherit RetrofixException from Exception to follow documentation guidelines
+
 Version 0.17 - 2016-01-14
 * Fix length of 'total' field of Presenter Header record of 340
 
