--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Version 0.18 - 2016-01-21
 * Raise RetrofixException instead of BaseException or Exception
 * Inherit RetrofixException from Exception to follow documentation guidelines
 
