Add AEAT 182 model suport

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ and more specifically for managing files from Spanish banks and public
 institutions, including:
 
 - CSB 19, 32, 34 (several versions), 43, 57 & 58
-- AEAT 303, 340, 347 & 349
+- AEAT 182, 303, 340, 347 & 349
 
 Installing
 ----------
