--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.20 - 2016-04-27
+* Add support for AEAT 182 Model
+
 Version 0.19 - 2016-03-17
 * CSB 43 - Bank office is null + Concept Bank are characters
 * Fix intracommunitary record for 340 report
