--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.24 - 2018-01-20
+* FIX imports and reader of 340 report
+
 Version 0.23 - 2017-03-01
 * FIX 303 report
 * Replace banknumber with python-stdnum
