MODEL 303:     Reformat the 'pages'     Reorder the postions.     Preapre for the SII/390

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.25 - 2021-02-12
+* Update model 303 with new "pages" and with important postions moves
+
 Version 0.24 - 2018-01-20
 * FIX imports and reader of 340 report
 
