Fix compiled file. Add CHANGELOG information

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 0.27.1 - 2021-02-12
+* Fix compiled file
+
+Version 0.27 - 2021-02-12
+* Update model 303 with news postions on pages 3 and 4
+
 Version 0.25 - 2021-02-12
 * Update model 303 with new "pages" and with important postions moves
 
