Update version and Changelog information. And fix some duplicated fields names

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.27.2- 2022-04-09
+* Update model 349 based on documentation from AEAT
+
 Version 0.27.1 - 2021-02-12
 * Fix compiled file
 
