--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.30.0- 2023-10-28
+* Add 2 new AEAT report models: 111 and 115
+
 Version 0.27.2- 2022-04-09
 * Update model 349 based on documentation from AEAT
 
