--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 Version 0.30.2 - 2024-04-26
+* Fix 115 Number fields. Need to align right and add '0' to left
+*
+Version 0.30.1 - 2024-04-26
 * Fix 349 ammendement relation fiscal year and period
 
 Version 0.30.0 - 2023-10-28
