--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.33.0 - 2026-02-09
+* Update 347, add new field BDNS call number.
+
 Version 0.32.0 - 2025-02-06
 * Update 303 fields with the new taxes structure.
 
